# about-rust

./: Continue.txt  README.md  _grab-labels.zsh  _grab-ongoings.zsh  _link-items.zsh  _toggle-nightly.sh
00-introspection/src/: main.rs
00-sized/: Cargo.toml
00-sized/src/: main.rs
00-type-coercions/: Cargo.toml
00-type-coercions/src/: main.rs
00-wrapper-types/src/: main.rs
02-a-tour-of-rust/: _run-gcd.sh  create-and-run-hello-world.sh
02-a-tour-of-rust/book-iron-gcd/: Cargo.toml
03-basic-types/src/: main.rs
04-ownership/src/: main.rs
05-references/src/: main.rs
06-expressions/src/: main.rs
07-error-handling/src/: main.rs
09-structs/src/: main.rs
10-enums-and-patterns/src/: main.rs
11-traits-and-generics/: Cargo.toml
11-traits-and-generics/src/: main.rs
12-operator-overloading/: Cargo.toml
12-operator-overloading/src/: main.rs
13-utility-traits/src/: main.rs
14-closures/src/: main.rs
15-iterators/src/: main.rs
16-collections/src/: main.rs
17-strings-and-text/: Cargo.toml
17-strings-and-text/src/: main.rs
18-input-and-output/: Cargo.toml
18-input-and-output/src/: main.rs
20-macros/src/: main.rs
21-unsafe-code/src/: main.rs
_revisit/: 00-type-coercisions.rs  16-collections.rs  17-strings-and-text.rs  git-diffs.txt  grab-labels.zsh  link-items.zsh
dark-arts-of-unsafe/: Cargo.toml
entirely-too-many-linked-lists/: Cargo.toml
extra/: disable-dead-code-warnings.txt
idioms/: Cargo.toml
linked-list-exercises/: book.toml
programming-rust/: _link-items.zsh
programming-rust/02-a-tour-of-rust/actix-gcd/: Cargo.toml
(+59 files in other folders)
