[package]
name = "actix-gcd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#	Rust's repository of packages is 'crates.io'
#	cargo makes it easy for us to use a crates package, we specify the name and version and it will download, build and update it as requested. 
#	<(Requiring a specific version of a package increases the chances our code will work)>.
[dependencies]
actix-web = "4.1"
serde = { version = "1.0", features = ["derive"] }

